# fec-experiment

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: run_synthetic_grid.sh
src/is_fec_experiments/: __init__.py  download_models.py  model_registry.py
src/is_fec_experiments/inversion/: __init__.py  clip_montage_eval.py  invert_batch_imagenet_val.py
src/is_fec_experiments/synthetic/: __init__.py  bernoulli_experiment.py  extract_r2.py
